refactored update function based on findings in peer review

--- a/Journal/Journal/View/Storyboards/Base.lproj/Main.storyboard
+++ b/Journal/Journal/View/Storyboards/Base.lproj/Main.storyboard
@@ -16,7 +16,7 @@
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
-                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" destinationCreationSelector="DetailNavigationSegue" id="NB8-b5-QWb"/>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="NB8-b5-QWb"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="2zm-Lj-D9e" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -32,7 +32,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="40" translatesAutoresizingMaskIntoConstraints="NO" id="Mo9-9m-HGU">
-                                <rect key="frame" x="20" y="113" width="374" height="709"/>
+                                <rect key="frame" x="20" y="147" width="374" height="707"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" spacing="12" translatesAutoresizingMaskIntoConstraints="NO" id="W3e-q5-skj">
                                         <rect key="frame" x="0.0" y="0.0" width="374" height="34"/>
@@ -51,7 +51,7 @@
                                         </subviews>
                                     </stackView>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="12" translatesAutoresizingMaskIntoConstraints="NO" id="hiN-QV-lEv">
-                                        <rect key="frame" x="0.0" y="74" width="374" height="635"/>
+                                        <rect key="frame" x="0.0" y="74" width="374" height="633"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Body:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nu1-YS-Tzk">
                                                 <rect key="frame" x="0.0" y="0.0" width="70" height="33.5"/>
@@ -60,7 +60,7 @@
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="bIU-Fh-GtG">
-                                                <rect key="frame" x="0.0" y="45.5" width="374" height="589.5"/>
+                                                <rect key="frame" x="0.0" y="45.5" width="374" height="587.5"/>
                                                 <color key="textColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
@@ -73,13 +73,25 @@
                                     </stackView>
                                 </subviews>
                             </stackView>
+                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="1" translatesAutoresizingMaskIntoConstraints="NO" id="xeI-X4-qtJ">
+                                <rect key="frame" x="20" y="96" width="374" height="32"/>
+                                <segments>
+                                    <segment title="😢"/>
+                                    <segment title="😐"/>
+                                    <segment title="🤣"/>
+                                </segments>
+                            </segmentedControl>
                         </subviews>
                         <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                         <constraints>
+                            <constraint firstItem="Mo9-9m-HGU" firstAttribute="top" secondItem="xeI-X4-qtJ" secondAttribute="bottom" constant="20" id="BkF-22-ohD"/>
+                            <constraint firstItem="xeI-X4-qtJ" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="DEM-HV-bio"/>
                             <constraint firstItem="Mo9-9m-HGU" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="SEc-RY-k5m"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="Mo9-9m-HGU" secondAttribute="bottom" constant="40" id="drl-AI-02p"/>
+                            <constraint firstItem="xeI-X4-qtJ" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="8" id="SdP-pP-TEq"/>
+                            <constraint firstItem="xeI-X4-qtJ" firstAttribute="leading" secondItem="Mo9-9m-HGU" secondAttribute="leading" id="XS4-3t-puu"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="Mo9-9m-HGU" secondAttribute="bottom" constant="8" id="drl-AI-02p"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Mo9-9m-HGU" secondAttribute="trailing" constant="20" id="kJj-zB-uS6"/>
-                            <constraint firstItem="Mo9-9m-HGU" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="25" id="kau-64-ezO"/>
+                            <constraint firstItem="xeI-X4-qtJ" firstAttribute="trailing" secondItem="Mo9-9m-HGU" secondAttribute="trailing" id="lri-D3-MRf"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
@@ -186,6 +198,6 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="MYJ-xE-wUS"/>
+        <segue reference="NB8-b5-QWb"/>
     </inferredMetricsTieBreakers>
 </document>
