--- a/Journal/Journal/Base.lproj/Main.storyboard
+++ b/Journal/Journal/Base.lproj/Main.storyboard
@@ -4,6 +4,7 @@
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15510"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="Stack View standard spacing" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -87,29 +88,47 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter a title:" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="0AP-HX-PWI">
-                                <rect key="frame" x="16" y="160" width="382" height="34"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </textField>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="RUz-r6-c6u">
-                                <rect key="frame" x="16" y="210" width="382" height="352"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                                <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
-                                <color key="textColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
-                            </textView>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="Hfp-F0-Pxw">
+                                <rect key="frame" x="16" y="160" width="382" height="402"/>
+                                <subviews>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter a title:" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="0AP-HX-PWI">
+                                        <rect key="frame" x="0.0" y="0.0" width="382" height="34"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="2" translatesAutoresizingMaskIntoConstraints="NO" id="xrI-ZO-wCB">
+                                        <rect key="frame" x="0.0" y="42" width="382" height="32"/>
+                                        <segments>
+                                            <segment title="🤢"/>
+                                            <segment title="😐"/>
+                                            <segment title="🤪"/>
+                                        </segments>
+                                    </segmentedControl>
+                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="RUz-r6-c6u">
+                                        <rect key="frame" x="0.0" y="81" width="382" height="321"/>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                        <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
+                                        <color key="textColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                    </textView>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="xrI-ZO-wCB" firstAttribute="leading" secondItem="Hfp-F0-Pxw" secondAttribute="leading" id="E0f-Td-8SO"/>
+                                    <constraint firstAttribute="trailing" secondItem="0AP-HX-PWI" secondAttribute="trailing" id="EuA-Hn-Dny"/>
+                                    <constraint firstAttribute="trailing" secondItem="xrI-ZO-wCB" secondAttribute="trailing" id="WTP-6Y-S9H"/>
+                                    <constraint firstItem="0AP-HX-PWI" firstAttribute="top" secondItem="Hfp-F0-Pxw" secondAttribute="top" id="d1o-Dc-N63"/>
+                                    <constraint firstItem="xrI-ZO-wCB" firstAttribute="top" secondItem="0AP-HX-PWI" secondAttribute="bottom" constant="8" id="u6g-Vr-JYI"/>
+                                    <constraint firstItem="0AP-HX-PWI" firstAttribute="leading" secondItem="Hfp-F0-Pxw" secondAttribute="leading" id="yOB-T9-021"/>
+                                </constraints>
+                            </stackView>
                         </subviews>
-                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="backgroundColor" red="0.65027144593878705" green="0.87058823529999996" blue="0.68619802986198886" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="pdO-jQ-I4g" firstAttribute="bottom" secondItem="RUz-r6-c6u" secondAttribute="bottom" constant="300" id="281-ps-0hI"/>
-                            <constraint firstItem="pdO-jQ-I4g" firstAttribute="trailing" secondItem="RUz-r6-c6u" secondAttribute="trailing" constant="16" id="Css-CZ-Mxp"/>
-                            <constraint firstItem="RUz-r6-c6u" firstAttribute="top" secondItem="0AP-HX-PWI" secondAttribute="bottom" constant="16" id="KzF-4n-BbO"/>
-                            <constraint firstItem="RUz-r6-c6u" firstAttribute="leading" secondItem="pdO-jQ-I4g" secondAttribute="leading" constant="16" id="NMN-Wh-V9f"/>
-                            <constraint firstItem="0AP-HX-PWI" firstAttribute="top" secondItem="pdO-jQ-I4g" secondAttribute="top" constant="20" id="QLd-lc-vdW"/>
-                            <constraint firstItem="0AP-HX-PWI" firstAttribute="leading" secondItem="pdO-jQ-I4g" secondAttribute="leading" constant="16" id="Vfn-6G-nvI"/>
-                            <constraint firstItem="pdO-jQ-I4g" firstAttribute="trailing" secondItem="0AP-HX-PWI" secondAttribute="trailing" constant="16" id="ul7-YR-Jys"/>
+                            <constraint firstItem="Hfp-F0-Pxw" firstAttribute="leading" secondItem="pdO-jQ-I4g" secondAttribute="leading" constant="16" id="XlU-SY-TGx"/>
+                            <constraint firstItem="Hfp-F0-Pxw" firstAttribute="top" secondItem="pdO-jQ-I4g" secondAttribute="top" constant="20" id="aLV-ZG-lWm"/>
+                            <constraint firstItem="pdO-jQ-I4g" firstAttribute="bottom" secondItem="Hfp-F0-Pxw" secondAttribute="bottom" constant="300" id="dF0-nM-hG6"/>
+                            <constraint firstItem="pdO-jQ-I4g" firstAttribute="trailing" secondItem="Hfp-F0-Pxw" secondAttribute="trailing" constant="16" id="m9S-BU-7nd"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="pdO-jQ-I4g"/>
                     </view>
@@ -122,6 +141,7 @@
                     </navigationItem>
                     <connections>
                         <outlet property="bodyTV" destination="RUz-r6-c6u" id="egq-Jl-HU2"/>
+                        <outlet property="moodSC" destination="xrI-ZO-wCB" id="cEN-Cg-rX1"/>
                         <outlet property="titleTF" destination="0AP-HX-PWI" id="TUe-5l-GdV"/>
                     </connections>
                 </viewController>
